user balance show

--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
     </div>
   </nav>
 
+  <div class="dark dark_secondary logged_in">
+    <div class="container pt-2 pb-2 d-flex align-items-center justify-content-between">
+      <div>
+        <span class="text-white" id="user_balance">0 SWAP.HIVE</span>
+      </div>
+      <div>
+        <button type="button" class="btn btn-warning btn-sm" id="deposit_button">Deposit</button>
+        <button type="button" class="btn btn-warning btn-sm" id="withdraw_button">Withdraw</button>
+      </div>
+    </div>
+  </div>
+
   <div class="modal fade" id="login_modal">
     <div class="modal-dialog">
       <div class="modal-content dark text-white">
