--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
     </div>
   </div>
 
+  <div id="toast_area" class="position-fixed ml-3 mt-3"></div>
+
   <div id="body" class="p-4 position-relative d-flex flex-column">
 
     <div id="app" class="container"></div>
-
-    <div id="toast_area" class="position-absolute"></div>
 
     <div class="text-center position-absolute align-self-center mt-5" id="loading">
       <div class="spinner-grow primary" style="width: 3rem; height: 3rem;"></div>
