--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
   <script src="https://cdn.jsdelivr.net/gh/MikeMcl/bignumber.js/bignumber.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sscjs@latest/dist/ssc.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/luxon@1.24.1"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-beta.9/dist/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@0.2.1"></script>
+  <script src="js/scripts/chartjs-chart-financial.js" type="text/javascript"></script>
+
   <script src="/js/utils.js"></script>
   <script src="/js/app.js"></script>
 
