--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-beta.9/dist/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@0.2.1"></script>
   <script src="js/scripts/chartjs-chart-financial.js" type="text/javascript"></script>
-
+  
   <script src="/js/config.js"></script>
   <script src="/js/utils.js"></script>
   <script src="/js/app.js"></script>
+  
+  <script data-ad-client="ca-pub-5903031199985375" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <title>SwapToken</title>
 </head>
