--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
   <script src="/js/app.js"></script>
   
   <script data-ad-client="ca-pub-5903031199985375" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-11413985-38"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-11413985-38');
+</script>
+
 
   <title>SwapToken</title>
 </head>
