Updated link home to https://swaptoken.com

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 </script>
 
 
-  <title>SwapToken</title>
+  <title>SwapToken.com - Gateway to Blockchain Crypto Currencies.</title>
 </head>
 <body class="d-flex flex-column">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark dark">
     <div class="container">
-      <a class="navbar-brand primary heading" href="/">
+      <a class="navbar-brand primary heading" href="https://swaptoken.com">
         <img width="45" height="45" src="/assets/logo.png">
         SwapToken.com
       </a>
